--- a/s03/index.html
+++ b/s03/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- external css -->
-    <link rel="stylesheet" href="style.css" type="text/css">
+    <link rel="stylesheet" href="style.css" type="text/css" />
 
     <!-- <style>
         /* internal css or embedded css */
@@ -23,11 +23,11 @@
             color: yellow;
         }
     </style> -->
-</head>
-<body>
+  </head>
+  <body>
     <h1>Welcome to CSS</h1>
     <!-- inline css -->
-    <p style="color: red;">
+    <!-- <p style="color: red;">
         <span style="color: blue;">Lorem ipsum dolor sit amet consectetur adipisicing elit.</span> Maiores nulla accusamus dicta unde quibusdam ad recusandae harum molestiae cum mollitia quaerat accusantium molestias voluptas, delectus nihil, nemo ratione enim eveniet.
     </p>
 
@@ -41,10 +41,10 @@
             <label for="fname">Firstname</label>
             <input type="text" name="fname" id="fname" placeholder="Enter firstname">
         </form>
-    </p>
+    </p> -->
 
     <!-- combinator selector -->
-    <div id="parent">
+    <!-- <div id="parent">
         <p>
             <span>First Paragraph</span>
         </p>
@@ -67,12 +67,28 @@
         <p>Eight Paragraph</p>
         <p>Ninth Paragraph</p>
         <p>New Paragraph</p>
-    </div>
+    </div> -->
 
-    <p class="screen">
+    <!-- <p class="screen">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad non obcaecati doloribus dolor, minima accusantium aut rerum earum voluptatem illo, itaque officiis. Aspernatur sequi, soluta libero officiis cupiditate veritatis totam.
     </p>
 
     <a href="https://google.com" target="_blank">Link</a>
-</body>
+
+    <p>
+        quick brown fox jumps over the ugly dog.
+    </p> -->
+
+    <div id="my-eyes">
+      <img src="sharingan.png" />
+    </div>
+
+    <ul>
+      <li>California Red</li>
+      <li>Emperador</li>
+      <li>Captain Morgan</li>
+      <li>Johnny Walker - Red Label</li>
+      <li>Smirnoff</li>
+    </ul>
+  </body>
 </html>
