--- a/s02/exercise-02/login.html
+++ b/s02/exercise-02/login.html
@@ -11,11 +11,13 @@
             align-items: flex-start;
             justify-content: center;
             min-height: 100vh;
+
+            font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
     </style>
 </head>
 <body>
-    <form action="srvrequest.html" method="post">
+    <form action="greetings.html" method="get">
         <table>
             <tr>
                 <td>
