--- a/s03/a03.html
+++ b/s03/a03.html
@@ -26,7 +26,7 @@
     <h2 id="to-uppercase">the following are things you will learn in this bootcamp</h2>
 
     <p>
-        Languages to be learned
+        <span style="font-weight: 700;">Languages to be learned</span>
         <ol class="languages">
             <li>Hypertext Markup Language</li>
             <li>Cascading Style Sheet</li>
