--- a/s03/a03.html
+++ b/s03/a03.html
@@ -52,5 +52,15 @@
     <div id="quote">
         Web development is a continuous process. Never stop learning and always look for ways to innovate.
     </div>
+
+    <div class="container">
+        <h1>
+            Header
+        </h1>
+
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis temporibus velit sit facere. Laborum nobis omnis nesciunt, reprehenderit architecto ab sint molestiae quasi tempore a aliquid vel, quos illum quo.
+        </p>
+    </div>
 </body>
 </html>
